--- a/style/style.css
+++ b/style/style.css
@@ -23,3 +23,30 @@
   border: 1px solid #f5f5f5;
 }
 
+.alter_wrapper{
+  min-width: 100%;
+  padding: 50px;
+}
+
+.form-row{
+  display: grid;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  max-width: 100%;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.col{
+  grid-row: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.alter_wrapper select, .alter_wrapper input{
+  flex: auto;
+}
