--- a/style/style.css
+++ b/style/style.css
@@ -1,18 +1,3 @@
-.results tr[visible='false'],
-.no-result{
-  display:none;
-}
-
-.results tr[visible='true']{
-  display:table-row;
-}
-
-.counter{
-  display: block;
-  padding: 15px 15px 15px 0px;
-  color:#4BB543;
-}
-
 #alter_input{
   border: 1px solid #9E9E9E;
 }
@@ -24,28 +9,90 @@
 }
 
 .alter_wrapper{
-  min-width: 100%;
-}
-
-.form-row{
-  display: grid;
-  gap: 20px;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
   max-width: 100%;
-  grid-template-columns: repeat(4, 1fr);
+  margin: 0 auto !important;
 }
 
-.col{
-  grid-row: 1;
+.alter_wrapper a{
+  list-style: none;
+  text-decoration: none;
+  cursor: pointer;
+  transition: transform .3s ease-in;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+}
+
+.alter_wrapper a:hover{
+  transform: scale(1.1);
+  transition: transform .3s ease-out;
+}
+
+.alter_wrapper .form-row{
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  max-width: 100%;
+  position: relative;
+  padding: 20px 0px;
+  background: #a9c23a;
+}
+
+.alter_wrapper .col{
   display: flex;
   flex-direction: row;
   align-items: center;
-  flex-wrap: wrap;
   gap: 20px;
+  color: #fff;
+  font-weight: 600;
 }
 
 .alter_wrapper select, .alter_wrapper input{
   flex: auto;
+}
+
+.alter_wrapper .container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 50px;
+  align-items: flex-start;
+  padding: 50px;
+  background: #f5f5f5;
+  border-radius: 5px;
+}
+
+.alter_wrapper .filterDiv {
+  display: none;
+  flex-basis: 20% !important;
+}
+
+.alter_wrapper img{
+  width: 100%;
+  height: auto;
+}
+
+.alter_wrapper .title{
+  font-size: 1rem;
+  font-weight: 600;
+  color: #282828;
+}
+
+.alter_wrapper .show {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+
+#alter-reset{
+  cursor: pointer;
+  font-size: .9rem;
+  text-decoration: underline;
 }
